tests/call_properties/call_properties.exp
Error: A.js:8
  8:   return f();
              ^^^ string. This type is incompatible with the expected return type of
  7: function b(f: { (): string }): number {
                                    ^^^^^^ number

Error: A.js:13
 13:   return f("hello");
                ^^^^^^^ string. This type is incompatible with the expected param type of
 12: function c(f: { (x: number): number }): number {
                         ^^^^^^ number

Error: A.js:18
 18:   return f();
              ^^^ call of object type. Called with too few arguments
   17: function d(f: { (x: number): number }): number {
                       ^^^^^^^^^^^^^^^^^^^ function type expects more arguments

Error: A.js:23
 23:   return f();
              ^^^ call of object type. Callable signature not found in
 23:   return f();
              ^ object type

Error: A.js:29
 29:   return x();
              ^^^ call of object literal. Callable signature not found in
 29:   return x();
              ^ object literal

Error: B.js:5
  5: var b: { (x: number): number } = function (x: number): string { return "hi"; };
                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function. This type is incompatible with
  5: var b: { (x: number): number } = function (x: number): string { return "hi"; };
            ^^^^^^^^^^^^^^^^^^^^^^^ object type
  Callable property is incompatible:
      5: var b: { (x: number): number } = function (x: number): string { return "hi"; };
                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function. This type is incompatible with
      5: var b: { (x: number): number } = function (x: number): string { return "hi"; };
                  ^^^^^^^^^^^^^^^^^^^ function type
      This parameter is incompatible:
          5: var b: { (x: number): number } = function (x: number): string { return "hi"; };
                                                                    ^^^^^^ string. This type is incompatible with
          5: var b: { (x: number): number } = function (x: number): string { return "hi"; };
                                   ^^^^^^ number

Error: B.js:8
  8: var c: { (x: string): string } = function (x: number): string { return "hi"; };
                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function. This type is incompatible with
  8: var c: { (x: string): string } = function (x: number): string { return "hi"; };
            ^^^^^^^^^^^^^^^^^^^^^^^ object type
  Callable property is incompatible:
      8: var c: { (x: string): string } = function (x: number): string { return "hi"; };
                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function. This type is incompatible with
      8: var c: { (x: string): string } = function (x: number): string { return "hi"; };
                  ^^^^^^^^^^^^^^^^^^^ function type
      This parameter is incompatible:
          8: var c: { (x: string): string } = function (x: number): string { return "hi"; };
                          ^^^^^^ string. This type is incompatible with
          8: var c: { (x: string): string } = function (x: number): string { return "hi"; };
                                                           ^^^^^^ number

Error: B.js:11
 11: var d: { (): string } = function (x: number): string { return "hi"; };
              ^^^^^^^^^^ undefined (too few arguments, expected default/rest parameters). This type is incompatible with
 11: var d: { (): string } = function (x: number): string { return "hi"; };
                                          ^^^^^^ number

Error: C.js:8
  8:   return x;
              ^ object type. This type is incompatible with the expected return type of
  7: function b(x: { (z: number): string }): (z: number) => number {
                                             ^^^^^^^^^^^^^^^^^^^^^ function type
  Callable property is incompatible:
      7: function b(x: { (z: number): string }): (z: number) => number {
                         ^^^^^^^^^^^^^^^^^^^ function type. This type is incompatible with
      7: function b(x: { (z: number): string }): (z: number) => number {
                                                 ^^^^^^^^^^^^^^^^^^^^^ function type
      This parameter is incompatible:
          7: function b(x: { (z: number): string }): (z: number) => number {
                                          ^^^^^^ string. This type is incompatible with
          7: function b(x: { (z: number): string }): (z: number) => number {
                                                                    ^^^^^^ number

Error: C.js:13
 13:   return x;
              ^ object type. This type is incompatible with the expected return type of
 12: function c(x: { (z: number): string }): (z: string) => string {
                                             ^^^^^^^^^^^^^^^^^^^^^ function type
  Callable property is incompatible:
     12: function c(x: { (z: number): string }): (z: string) => string {
                         ^^^^^^^^^^^^^^^^^^^ function type. This type is incompatible with
     12: function c(x: { (z: number): string }): (z: string) => string {
                                                 ^^^^^^^^^^^^^^^^^^^^^ function type
      This parameter is incompatible:
         12: function c(x: { (z: number): string }): (z: string) => string {
                                                         ^^^^^^ string. This type is incompatible with
         12: function c(x: { (z: number): string }): (z: string) => string {
                                 ^^^^^^ number

Error: C.js:17
 17: function d(x: { (z: number): string }): () => string {
                                             ^^^^^^^^^^^^ undefined (too few arguments, expected default/rest parameters). This type is incompatible with
 17: function d(x: { (z: number): string }): () => string {
                         ^^^^^^ number

Error: C.js:23
 23:   return x;
              ^ object type. This type is incompatible with the expected return type of
 22: function e(x: {}): () => string {
                        ^^^^^^^^^^^^ function type
  Callable property is incompatible:
     22: function e(x: {}): () => string {
                            ^^^^^^^^^^^^ function type. Callable signature not found in
     23:   return x;
                  ^ object type

Error: C.js:33
 33:   return x; // error
              ^ object type. This type is incompatible with the expected return type of
 32: function g(x: {}): Function {
                        ^^^^^^^^ function type
  Callable property is incompatible:
     32: function g(x: {}): Function {
                            ^^^^^^^^ function type. Callable signature not found in
     33:   return x; // error
                  ^ object type

Error: D.js:11
 11: var c: { (): string; (x: number): string } =
              ^^^^^^^^^^ undefined (too few arguments, expected default/rest parameters). This type is incompatible with
 12:   function (x: number): string { return "hi"; };
                    ^^^^^^ number

Error: D.js:20
 20: function e(x: { (): string; (x: number): string }): () => number {
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ intersection. This type is incompatible with
 20: function e(x: { (): string; (x: number): string }): () => number {
                                                         ^^^^^^^^^^^^ function type
  Member 1:
   20: function e(x: { (): string; (x: number): string }): () => number {
                       ^^^^^^^^^^ function type
  Error:
   21:   return x;
                ^ object type. This type is incompatible with the expected return type of
   20: function e(x: { (): string; (x: number): string }): () => number {
                                                           ^^^^^^^^^^^^ function type
    Callable property is incompatible:
       20: function e(x: { (): string; (x: number): string }): () => number {
                           ^^^^^^^^^^ function type. This type is incompatible with
       20: function e(x: { (): string; (x: number): string }): () => number {
                                                               ^^^^^^^^^^^^ function type
        This parameter is incompatible:
           20: function e(x: { (): string; (x: number): string }): () => number {
                                   ^^^^^^ string. This type is incompatible with
           20: function e(x: { (): string; (x: number): string }): () => number {
                                                                         ^^^^^^ number
  Member 2:
   20: function e(x: { (): string; (x: number): string }): () => number {
                                   ^^^^^^^^^^^^^^^^^^^ function type
  Error:
   20: function e(x: { (): string; (x: number): string }): () => number {
                                                           ^^^^^^^^^^^^ undefined (too few arguments, expected default/rest parameters). This type is incompatible with
   20: function e(x: { (): string; (x: number): string }): () => number {
                                       ^^^^^^ number

Error: E.js:2
  2: var a : { someProp: number } = function () {};
             ^^^^^^^^^^^^^^^^^^^^ property `someProp` of object type. Property not found in
  2: var a : { someProp: number } = function () {};
                                    ^^^^^^^^^^^^^^ function

Error: F.js:6
  6: var b: { (x: number): number } = (x) => "hi"
                                      ^^^^^^^^^^^ function. This type is incompatible with
  6: var b: { (x: number): number } = (x) => "hi"
            ^^^^^^^^^^^^^^^^^^^^^^^ object type
  Callable property is incompatible:
      6: var b: { (x: number): number } = (x) => "hi"
                                          ^^^^^^^^^^^ function. This type is incompatible with
      6: var b: { (x: number): number } = (x) => "hi"
                  ^^^^^^^^^^^^^^^^^^^ function type
      This parameter is incompatible:
          6: var b: { (x: number): number } = (x) => "hi"
                                                     ^^^^ string. This type is incompatible with
          6: var b: { (x: number): number } = (x) => "hi"
                                   ^^^^^^ number

Error: F.js:9
  9: var c: { (x: string): string } = (x) => x.toFixed()
                                               ^^^^^^^ property `toFixed`. Property not found in
  9: var c: { (x: string): string } = (x) => x.toFixed()
                                             ^ String

Error: use_ops.js:4
  4: (a: B); // error HERE and preserve use ops
      ^ object type. This type is incompatible with
  4: (a: B); // error HERE and preserve use ops
         ^ object type
  Property `p` is incompatible:
      1: type A = { p: {} }
                       ^^ object type. This type is incompatible with
      2: type B = { +p: () => void }
                        ^^^^^^^^^^ function type
      Callable property is incompatible:
          2: type B = { +p: () => void }
                            ^^^^^^^^^^ function type. Callable signature not found in
          1: type A = { p: {} }
                           ^^ object type


Found 19 errors
